# Perplexity-claude

./: .example.env  .gitignore  CHANGELOG.md  Dockerfile  FINAL_UPDATE_SUMMARY.md  MCP_UPDATE_COMPLETE.md  PUBLISHING_GUIDE.md  README.md  SIMPLE_PROFILE.md  chat  docker-compose.yml  nohup.out  pyproject.toml  pytest.ini  requirements.txt  te.md
.claude-flow/metrics/: performance.json  task-metrics.json
.roo/: mcp.json
docs/: CLI_README.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_UPDATES.md  IMPLEMENTATION_SUMMARY.md  MCP_SERVER_SUMMARY.md  MCP_SPACE_CREATION_FIXED.md  PROFILE_FEATURE_GUIDE.md  PROXY_SETUP_SUMMARY.md  README.md  SIMPLE_MCP_README.md  SPACES_FEATURE.md  SPACE_CREATION_GUIDE.md  USAGE.md  WEBHOOK_MCP_DOCUMENTATION.md  WEBHOOK_MCP_QUICKSTART.md  WINDSURF_INTEGRATION.md
scripts/: release.sh
src/: __init__.py  chat_cli.py  check_server.py  example_usage.py  litellm_proxy.py  perplexity_api.py  perplexity_fixed.py  perplexity_mcp_main.py  perplexity_profiles.py  s2.py  server.py  simple_perplexity_mcp.py  use_mcp_server.py  webhook_mcp.py
src/.claude-flow/metrics/: performance.json  task-metrics.json
src/perplexity_mcp_server/: IMPROVEMENTS.md  README.md  __init__.py  __main__.py  config.json  requirements.txt  server.py
src/perplexity_mcp_server/config/: __init__.py  (+1 more)
src/updates/: cookies_update.md
temp-test/: README.md  requirements.txt  run_all_tests.py
temp-test/responses/: basic_search_auto_20251012_223038.json  client_auto_mode_20251012_223206.json  client_follow_up_20251012_223302.json  client_multiple_sources_20251012_223245.json  client_pro_mode_20251012_223214.json  client_reasoning_mode_20251012_223216.json  client_scholar_source_20251012_223238.json  client_streaming_20251012_223247.json  client_web_source_20251012_223228.json  code_analysis_profile_20251012_223200.json  pro_mode_search_20251012_223110.json  quick_search_20251012_223128.json  research_profile_20251012_223153.json  search_with_sources_20251012_223048.json  search_with_sources_func_20251012_223140.json  streaming_search_20251012_223122.json
tests/: CHECKLIST.md  EXAMPLES.md  GETTING_STARTED.md  INDEX.md  README.md  __init__.py  cookies.example.json  quick_test.sh  run_api.py  setup_and_test.sh
(+31 files in other folders)
