[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-mcp-server"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for Perplexity AI integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["perplexity", "mcp", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "prompt_toolkit>=3.0.0",
    "aiohttp>=3.8.0",
    "browser-cookie3>=0.19.0",
    "curl_cffi>=0.5.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/Perplexity-claude"
Documentation = "https://github.com/yourusername/Perplexity-claude#readme"
Repository = "https://github.com/yourusername/Perplexity-claude"
Issues = "https://github.com/yourusername/Perplexity-claude/issues"

[project.scripts]
perplexity-mcp = "src.perplexity_mcp_server.server:main"
perplexity-chat = "src.chat_cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
